Fix rule spacing

--- a/static/style.css
+++ b/static/style.css
@@ -60,6 +60,7 @@
   width: 5rem;
   padding: 0;
   margin: 0;
+  height: 1.3rem;
   position: relative;
 }
 
